# INFINITY-AIXX

./: .gitignore  CHANGELOG.md  Makefile  README.md  pyproject.toml
configs/: cartpole_ultra_fast.yaml  cartpole_ultra_fast_async_storage.yaml  default.yaml  minigrid_memoryS9_base.yaml  minigrid_unlock_base.yaml  multitask_gym3.yaml
docs/: DEBUG_REPORT.md  HUMANLIKE_PLAN.md  MANUAL.txt  WHAT_TO_TUNE_FIRST.txt
scripts/: auto_tuner_dual_hybrid.py  run_matrix.py  train_cartpole_mamba2.py  vectorenv_smoke.py
src/humanlike_core/: __init__.py  config.py  counterfactual_simulator.py  decision_router.py  emotion_controller.py  self_model.py
src/infinity_dual_hybrid/: __init__.py  adapters.py  agent.py  auto_eval_runs.py  best_checkpoint.py  config.py  encoders.py  envs.py  eval.py  logger.py  ltm.py  mamba2_fallback.py  ppo_trainer.py  report.py  run_registry.py  self_model.py  smoke.py  ssm_backbone.py  sweep.py  trace.py  train.py  train_cli.py  world_model.py
src/infinity_dual_hybrid/metrics/: __init__.py  calibration.py  plots.py  transfer.py
src/infinity_dual_hybrid/tasks/: __init__.py  registry.py  rollout_mux.py  router.py  spec.py
src/infinity_dual_hybrid/trainers/: __init__.py  ppo_trainer_fast.py
src/infinity_dual_hybrid/utils/: __init__.py  torch_utils.py
tests/: __init__.py  conftest.py  test_auto_eval_import.py  test_best_checkpoint.py  test_checkpoint_roundtrip.py  test_config_yaml.py  test_imports.py  test_logger_smoke.py  test_ppo_rollout_smoke.py  test_reset_contract.py  test_shapes_world_model.py  test_smoke_trace.py
